--- a/kimura/index.html
+++ b/kimura/index.html
@@ -3,17 +3,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
 </head>
-
 <body>
-  Hello world
+  <div id="greeting-area">Hello world</div>
   <script src="js/scripts.js"></script>
+  <script>
+  let greet = new Greeting();
+  // publicなのでアクセスできる
+  var str = greet.sayHello('ono');
+  document.getElementById('greeting-area').innerHTML = str;
+  // privateなのでエラーになる
+  console.log(greet.privateMethod());
+  </script>
 </body>
 </html>
