--- a/kimura/index.html
+++ b/kimura/index.html
@@ -14,6 +14,13 @@
     console.log(res);
   };
   asynchronous();
+    
+  const promise = Promise.resolve();
+  promise.then(function(){
+    return Promise.resolve(klass.asyncMethod());
+  })
+  .then(function(){
+  });
   </script>
 </body>
 </html>
